--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -45,6 +45,12 @@ body {
     text-align: left;
   }
 }
+@include media{
+  .container{
+    width: 100%;
+   
+  }
+}
 html[data-theme='dark']{
   background-color: #0a0d15;
 }
