feat: add links

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -40,7 +40,7 @@ body {
   background-color: #0a0d15;
 }
 .footer__col{
-  text-align: center;
+  // text-align: center;
   @include media{
     text-align: left;
   }
