fix: audio paly

--- a/src/components/Christmas/style.module.scss
+++ b/src/components/Christmas/style.module.scss
@@ -113,3 +113,8 @@
 .tree li:nth-child(4n+3)::before{
   background-color: #5D9CEC;
 }
+audio {
+  position: absolute;
+  top: -999999px;
+  z-index: 10000;
+}
