--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -9,6 +9,7 @@
   position: relative;
   overflow: hidden;
   background: url('@site/static/img/home/banner.png') no-repeat;
+  background-color: #011020;
   background-size: cover;
   background-position: 50% 50%;
   height: 100vh;
