--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -105,3 +105,6 @@ span.shinning3 {
   -webkit-background-clip: text;
   color: transparent;
 }
+.blogPostTitle_node_modules-\@docusaurus-theme-classic-lib-next-theme-BlogPostItem-styles-module {
+  font-size: 2rem!important;
+}
